// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application/App Overview 1`] = `
<DocumentFragment>
  <section
    aria-label="skip tab order to linked items"
    class="css-u7r4qj"
  >
    <div
      class="css-vurnku"
    >
      <a
        data-skip-link="true"
        href="#content"
      >
        skip to main content
      </a>
    </div>
    <div
      class="css-vurnku"
    >
      <a
        data-skip-link="true"
        href="#sidebar"
      >
        skip to navigation sidebar
      </a>
    </div>
    <div
      class="css-vurnku"
    >
      <a
        data-skip-link="true"
        href="#contextbar"
      >
        skip to context sidebar
      </a>
    </div>
  </section>
  <div
    class="css-18pgspc"
  >
    <header
      class="css-1hp4xbx"
    >
      <div
        class="css-2qw0qa"
      >
        <div
          class="css-vurnku"
        >
          <div
            class="css-f5h6sg"
          >
            <div
              class="css-1r0dpp4"
            >
              <a
                class="css-17rhkus"
                href="/"
              >
                <h2
                  class="css-229nmx"
                >
                  Component controls
                </h2>
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-2qw0qa"
      >
        <div
          class="css-vurnku"
        >
          <div
            class="css-f5h6sg"
          >
            <div
              class="css-1r0dpp4"
            >
              <div
                class="css-12hibeq"
              >
                <div
                  class="css-t2f9yn-SearchInput"
                >
                  <input
                    aria-label="full text search"
                    class="css-1uvmzy6-SearchInput"
                    placeholder="search..."
                    value=""
                  />
                  <svg
                    aria-hidden="true"
                    class="css-nxci97-SearchInput"
                    fill="currentColor"
                    height="16"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="css-t64qi8"
            >
              <div
                class="css-vurnku"
              >
                <div
                  style="position: relative; display: inline-block; text-align: left; opacity: 1; direction: ltr; border-radius: 14px; transition: opacity 0.25s; user-select: none;"
                >
                  <div
                    class="react-switch-bg"
                    style="height: 28px; width: 56px; margin: 0px; position: relative; background: rgb(221, 221, 221); border-radius: 14px; cursor: pointer; transition: background 0.25s;"
                  >
                    <div
                      style="height: 28px; width: 30px; position: relative; opacity: 0; pointer-events: none; transition: opacity 0.25s;"
                    >
                      <div
                        class="css-vfszow"
                      >
                        <div
                          class="css-14ic6yi"
                        >
                          <svg
                            aria-hidden="true"
                            class="octicon"
                            fill="currentColor"
                            height="16"
                            role="img"
                            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <path
                              d="M9.598 1.591a.75.75 0 01.785-.175 7 7 0 11-8.967 8.967.75.75 0 01.961-.96 5.5 5.5 0 007.046-7.046.75.75 0 01.175-.786zm1.616 1.945a7 7 0 01-7.678 7.678 5.5 5.5 0 107.678-7.678z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <div
                      style="height: 28px; width: 30px; position: absolute; opacity: 1; right: 0px; top: 0px; pointer-events: none; transition: opacity 0.25s;"
                    >
                      <div
                        class="css-vfszow"
                      >
                        <div
                          class="css-14ic6yi"
                        >
                          <svg
                            aria-hidden="true"
                            class="octicon"
                            fill="currentColor"
                            height="16"
                            role="img"
                            style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <path
                              d="M8 10.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5zM8 12a4 4 0 100-8 4 4 0 000 8zM8 0a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0V.75A.75.75 0 018 0zm0 13a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0v-1.5A.75.75 0 018 13zM2.343 2.343a.75.75 0 011.061 0l1.06 1.061a.75.75 0 01-1.06 1.06l-1.06-1.06a.75.75 0 010-1.06zm9.193 9.193a.75.75 0 011.06 0l1.061 1.06a.75.75 0 01-1.06 1.061l-1.061-1.06a.75.75 0 010-1.061zM16 8a.75.75 0 01-.75.75h-1.5a.75.75 0 010-1.5h1.5A.75.75 0 0116 8zM3 8a.75.75 0 01-.75.75H.75a.75.75 0 010-1.5h1.5A.75.75 0 013 8zm10.657-5.657a.75.75 0 010 1.061l-1.061 1.06a.75.75 0 11-1.06-1.06l1.06-1.06a.75.75 0 011.06 0zm-9.193 9.193a.75.75 0 010 1.06l-1.06 1.061a.75.75 0 11-1.061-1.06l1.06-1.061a.75.75 0 011.061 0z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="react-switch-handle"
                    style="height: 26px; width: 26px; background: rgb(255, 255, 255); display: inline-block; cursor: pointer; border-radius: 50%; position: absolute; transform: translateX(1px); top: 1px; outline: 0; border: 0px; transition: background-color 0.25s, transform 0.25s, box-shadow 0.15s;"
                  />
                  <input
                    aria-checked="false"
                    aria-label="Toggle dark mode"
                    role="switch"
                    style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
    <footer
      class="css-1q4h9js"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-f5h6sg"
        >
          <div
            class="css-1r0dpp4"
          >
            <div
              class="css-vurnku"
            >
              Copyright © 2020 by @component-controls
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-vurnku"
      >
        <div
          class="css-f5h6sg"
        >
          <div
            class="css-1r0dpp4"
          >
            <a
              aria-label="visit project home page"
              class="css-ax59ca"
              href="https://component-controls.com"
            >
              Component controls
            </a>
          </div>
        </div>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Application/AppError Overview 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    some error
    <br />
    text
    <br />
  </div>
</DocumentFragment>
`;

exports[`Application/CategoryList Overview 1`] = `
<DocumentFragment>
  <div
    class="css-isly2z"
    id="content"
  >
    <div
      class="css-vurnku"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-1nu2k4w"
        >
          <div
            class="css-1hu569t"
          />
        </div>
        <div
          class="css-hi5zbn"
        >
          <h1
            class="css-11z6fnw-Container"
          >
            Story
          </h1>
        </div>
        <h2
          class="css-1942w8h"
        >
          story subtitle
        </h2>
        <h1
          class="css-ixvu55"
        >
          Authors
        </h1>
        <div
          class="css-vurnku"
        >
          <ul>
            <li>
              <div
                class="css-1dj4wno"
              >
                <a
                  class="css-ax59ca"
                  href="/authors/atanasster"
                >
                  <h2
                    class="css-1942w8h"
                  >
                    atanasster (2)
                  </h2>
                </a>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="css-5qse13"
        >
          <div
            class="css-8r2q2l"
          >
            <div
              class="css-vurnku"
            />
            <div
              class="css-vurnku"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Application/CategoryPage Overview 1`] = `
<DocumentFragment>
  <div
    class="css-isly2z"
    id="content"
  >
    <div
      class="css-vurnku"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-1nu2k4w"
        >
          <div
            class="css-1hu569t"
          />
        </div>
        <div
          class="css-hi5zbn"
        >
          <h1
            class="css-11z6fnw-Container"
          >
            Story
          </h1>
        </div>
        <h2
          class="css-1942w8h"
        >
          story subtitle
        </h2>
        <div
          class="css-1nu2k4w"
        >
          <h1
            class="css-ixvu55"
          >
            atanasster
          </h1>
          <a
            class="css-ax59ca"
            href="/authors/"
          >
            All Authors
          </a>
        </div>
        <div
          class="css-1hrc83f"
        >
          <div
            class="css-vurnku"
          >
            <div
              class="css-18xaazt"
            >
              <label
                class="css-okr6fe"
                for="sortorder"
              >
                Sort by:
              </label>
              <div
                class="css-4cffwv"
              >
                <select
                  class="css-1lmm0mo"
                  name="sortorder"
                >
                  <option
                    value="date"
                  >
                    By date created
                  </option>
                  <option
                    value="dateModified"
                  >
                    By last updated
                  </option>
                  <option
                    value="title"
                  >
                    By title
                  </option>
                </select>
                <svg
                  class="css-1swud1q"
                  fill="currentcolor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 10l5 5 5-5z"
                  />
                </svg>
              </div>
            </div>
            <ul
              class="css-da1yre"
            >
              <li
                class="css-1ijilga"
              >
                <div
                  class="css-127g8mg"
                >
                  <div
                    class="css-4136op"
                  >
                    <a
                      class="css-ax59ca"
                      href="/docs/id-of-story"
                    >
                      <h2
                        class="css-1942w8h"
                      >
                        Story
                      </h2>
                    </a>
                    <a
                      class="css-ax59ca"
                      href="/docs/"
                    >
                      <span
                        class="css-14znsfl-Tag"
                      >
                        <div
                          class="css-vurnku"
                        >
                          story
                        </div>
                      </span>
                    </a>
                  </div>
                  <div
                    class="css-1jbmnp7"
                  >
                    <div
                      class="css-f5h6sg"
                    >
                      <div
                        class="css-83lfx1"
                      >
                        created: 1/1/2020
                      </div>
                      <div
                        class="css-f5h6sg"
                      >
                        <div
                          class="css-9cwl6c"
                        >
                          ,
                        </div>
                        <div
                          class="css-12cl38p"
                        >
                          by
                        </div>
                        <a
                          class="css-ax59ca"
                          href="/authors/atanasster"
                        >
                          atanasster
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="css-1ijilga"
              >
                <div
                  class="css-127g8mg"
                >
                  <div
                    class="css-4136op"
                  >
                    <a
                      class="css-ax59ca"
                      href="/docs/mdx-story"
                    >
                      <h2
                        class="css-1942w8h"
                      >
                        MDX Story
                      </h2>
                    </a>
                    <a
                      class="css-ax59ca"
                      href="/docs/"
                    >
                      <span
                        class="css-14znsfl-Tag"
                      >
                        <div
                          class="css-vurnku"
                        >
                          story
                        </div>
                      </span>
                    </a>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="css-5qse13"
        >
          <div
            class="css-8r2q2l"
          >
            <div
              class="css-vurnku"
            />
            <div
              class="css-vurnku"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Application/Container Overview 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div
      class="css-vurnku"
    >
      <div
        class="css-1nu2k4w"
      >
        <div
          class="css-1hu569t"
        />
      </div>
      <div
        class="css-hi5zbn"
      >
        <h1
          class="css-11z6fnw-Container"
        >
          Story
        </h1>
      </div>
      <h2
        class="css-1942w8h"
      >
        story subtitle
      </h2>
      <div
        class="css-5qse13"
      >
        <div
          class="css-8r2q2l"
        >
          <div
            class="css-vurnku"
          />
          <div
            class="css-vurnku"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Application/DocPage Overview 1`] = `
<DocumentFragment>
  <div
    class="css-11ay4b0"
    id="content"
  >
    <div
      class="css-vurnku"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-1nu2k4w"
        >
          <div
            class="css-1hu569t"
          />
        </div>
        <div
          class="css-hi5zbn"
        >
          <h1
            class="css-11z6fnw-Container"
          >
            Story
          </h1>
        </div>
        <h2
          class="css-1942w8h"
        >
          story subtitle
        </h2>
        <div
          class="css-5qse13"
        >
          <div
            class="css-8r2q2l"
          >
            <div
              class="css-vurnku"
            />
            <div
              class="css-vurnku"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Application/DocumentHomePage Overview 1`] = `
<DocumentFragment>
  <div
    class="css-isly2z"
    id="content"
  >
    <div
      class="css-vurnku"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-1nu2k4w"
        >
          <div
            class="css-1hu569t"
          />
        </div>
        <div
          class="css-hi5zbn"
        >
          <h1
            class="css-11z6fnw-Container"
          >
            Story
          </h1>
        </div>
        <h2
          class="css-1942w8h"
        >
          story subtitle
        </h2>
        <h1
          class="css-ixvu55"
        >
          Blog
        </h1>
        <div
          class="css-vurnku"
        >
          <div
            class="css-18xaazt"
          >
            <label
              class="css-okr6fe"
              for="sortorder"
            >
              Sort by:
            </label>
            <div
              class="css-4cffwv"
            >
              <select
                class="css-1lmm0mo"
                name="sortorder"
              >
                <option
                  value="date"
                >
                  By date created
                </option>
                <option
                  value="dateModified"
                >
                  By last updated
                </option>
                <option
                  value="title"
                >
                  By title
                </option>
              </select>
              <svg
                class="css-1swud1q"
                fill="currentcolor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 10l5 5 5-5z"
                />
              </svg>
            </div>
          </div>
          <ul
            class="css-da1yre"
          />
        </div>
        <div
          class="css-5qse13"
        >
          <div
            class="css-8r2q2l"
          >
            <div
              class="css-vurnku"
            />
            <div
              class="css-vurnku"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Application/DocumentsList Overview 1`] = `
<DocumentFragment>
  <div
    class="css-vurnku"
  >
    <div
      class="css-18xaazt"
    >
      <label
        class="css-okr6fe"
        for="sortorder"
      >
        Sort by:
      </label>
      <div
        class="css-4cffwv"
      >
        <select
          class="css-1lmm0mo"
          name="sortorder"
        >
          <option
            value="date"
          >
            By date created
          </option>
          <option
            value="dateModified"
          >
            By last updated
          </option>
          <option
            value="title"
          >
            By title
          </option>
        </select>
        <svg
          class="css-1swud1q"
          fill="currentcolor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
    <ul
      class="css-da1yre"
    >
      <li
        class="css-1ijilga"
      >
        <div
          class="css-127g8mg"
        >
          <div
            class="css-4136op"
          >
            <a
              class="css-ax59ca"
              href="/docs/id-of-story"
            >
              <h2
                class="css-1942w8h"
              >
                Story
              </h2>
            </a>
            <a
              class="css-ax59ca"
              href="/docs/"
            >
              <span
                class="css-14znsfl-Tag"
              >
                <div
                  class="css-vurnku"
                >
                  story
                </div>
              </span>
            </a>
          </div>
          <div
            class="css-1jbmnp7"
          >
            <div
              class="css-f5h6sg"
            >
              <div
                class="css-83lfx1"
              >
                created: 1/1/2020
              </div>
              <div
                class="css-f5h6sg"
              >
                <div
                  class="css-9cwl6c"
                >
                  ,
                </div>
                <div
                  class="css-12cl38p"
                >
                  by
                </div>
                <a
                  class="css-ax59ca"
                  href="/authors/atanasster"
                >
                  atanasster
                </a>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="css-1ijilga"
      >
        <div
          class="css-127g8mg"
        >
          <div
            class="css-4136op"
          >
            <a
              class="css-ax59ca"
              href="/docs/mdx-story"
            >
              <h2
                class="css-1942w8h"
              >
                MDX Story
              </h2>
            </a>
            <a
              class="css-ax59ca"
              href="/docs/"
            >
              <span
                class="css-14znsfl-Tag"
              >
                <div
                  class="css-vurnku"
                >
                  story
                </div>
              </span>
            </a>
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Application/Footer Overview 1`] = `
<DocumentFragment>
  <footer
    class="css-1q4h9js"
  >
    <div
      class="css-vurnku"
    >
      <div
        class="css-f5h6sg"
      >
        <div
          class="css-1r0dpp4"
        >
          <div
            class="css-vurnku"
          >
            Copyright © 2020 by @component-controls
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-vurnku"
    >
      <div
        class="css-f5h6sg"
      >
        <div
          class="css-1r0dpp4"
        >
          <a
            aria-label="visit project home page"
            class="css-ax59ca"
            href="https://component-controls.com"
          >
            Component controls
          </a>
        </div>
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Application/Header Custom Left 1`] = `
<DocumentFragment>
  <header
    class="css-1hp4xbx"
  >
    <div
      class="css-2qw0qa"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-f5h6sg"
        >
          <div
            class="css-1r0dpp4"
          >
            <a
              class="css-17rhkus"
              href="/"
            >
              <h2
                class="css-229nmx"
              >
                Component controls
              </h2>
            </a>
          </div>
          <div
            class="css-t64qi8"
          >
            <button
              class="css-1b2uwqj"
            >
              custom
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-2qw0qa"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-f5h6sg"
        >
          <div
            class="css-1r0dpp4"
          >
            <div
              class="css-12hibeq"
            >
              <div
                class="css-t2f9yn-SearchInput"
              >
                <input
                  aria-label="full text search"
                  class="css-1uvmzy6-SearchInput"
                  placeholder="search..."
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="css-nxci97-SearchInput"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="css-t64qi8"
          >
            <div
              class="css-vurnku"
            >
              <div
                style="position: relative; display: inline-block; text-align: left; opacity: 1; direction: ltr; border-radius: 14px; transition: opacity 0.25s; user-select: none;"
              >
                <div
                  class="react-switch-bg"
                  style="height: 28px; width: 56px; margin: 0px; position: relative; background: rgb(221, 221, 221); border-radius: 14px; cursor: pointer; transition: background 0.25s;"
                >
                  <div
                    style="height: 28px; width: 30px; position: relative; opacity: 0; pointer-events: none; transition: opacity 0.25s;"
                  >
                    <div
                      class="css-vfszow"
                    >
                      <div
                        class="css-14ic6yi"
                      >
                        <svg
                          aria-hidden="true"
                          class="octicon"
                          fill="currentColor"
                          height="16"
                          role="img"
                          style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M9.598 1.591a.75.75 0 01.785-.175 7 7 0 11-8.967 8.967.75.75 0 01.961-.96 5.5 5.5 0 007.046-7.046.75.75 0 01.175-.786zm1.616 1.945a7 7 0 01-7.678 7.678 5.5 5.5 0 107.678-7.678z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    style="height: 28px; width: 30px; position: absolute; opacity: 1; right: 0px; top: 0px; pointer-events: none; transition: opacity 0.25s;"
                  >
                    <div
                      class="css-vfszow"
                    >
                      <div
                        class="css-14ic6yi"
                      >
                        <svg
                          aria-hidden="true"
                          class="octicon"
                          fill="currentColor"
                          height="16"
                          role="img"
                          style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M8 10.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5zM8 12a4 4 0 100-8 4 4 0 000 8zM8 0a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0V.75A.75.75 0 018 0zm0 13a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0v-1.5A.75.75 0 018 13zM2.343 2.343a.75.75 0 011.061 0l1.06 1.061a.75.75 0 01-1.06 1.06l-1.06-1.06a.75.75 0 010-1.06zm9.193 9.193a.75.75 0 011.06 0l1.061 1.06a.75.75 0 01-1.06 1.061l-1.061-1.06a.75.75 0 010-1.061zM16 8a.75.75 0 01-.75.75h-1.5a.75.75 0 010-1.5h1.5A.75.75 0 0116 8zM3 8a.75.75 0 01-.75.75H.75a.75.75 0 010-1.5h1.5A.75.75 0 013 8zm10.657-5.657a.75.75 0 010 1.061l-1.061 1.06a.75.75 0 11-1.06-1.06l1.06-1.06a.75.75 0 011.06 0zm-9.193 9.193a.75.75 0 010 1.06l-1.06 1.061a.75.75 0 11-1.061-1.06l1.06-1.061a.75.75 0 011.061 0z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="react-switch-handle"
                  style="height: 26px; width: 26px; background: rgb(255, 255, 255); display: inline-block; cursor: pointer; border-radius: 50%; position: absolute; transform: translateX(1px); top: 1px; outline: 0; border: 0px; transition: background-color 0.25s, transform 0.25s, box-shadow 0.15s;"
                />
                <input
                  aria-checked="false"
                  aria-label="Toggle dark mode"
                  role="switch"
                  style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                  type="checkbox"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Application/Header Custom Right 1`] = `
<DocumentFragment>
  <header
    class="css-1hp4xbx"
  >
    <div
      class="css-2qw0qa"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-f5h6sg"
        >
          <div
            class="css-1r0dpp4"
          >
            <a
              class="css-17rhkus"
              href="/"
            >
              <h2
                class="css-229nmx"
              >
                Component controls
              </h2>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-2qw0qa"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-f5h6sg"
        >
          <div
            class="css-1r0dpp4"
          >
            <a
              aria-label="visit github repo"
              class="css-12cl38p"
              href="https://github.com/ccontrols/component-controls"
              rel="noopener noreferrer"
              target="_blank"
            >
              github
            </a>
          </div>
          <div
            class="css-t64qi8"
          >
            <div
              class="css-12hibeq"
            >
              <div
                class="css-t2f9yn-SearchInput"
              >
                <input
                  aria-label="full text search"
                  class="css-1uvmzy6-SearchInput"
                  placeholder="search..."
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="css-nxci97-SearchInput"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="css-t64qi8"
          >
            <div
              class="css-vurnku"
            >
              <div
                style="position: relative; display: inline-block; text-align: left; opacity: 1; direction: ltr; border-radius: 14px; transition: opacity 0.25s; user-select: none;"
              >
                <div
                  class="react-switch-bg"
                  style="height: 28px; width: 56px; margin: 0px; position: relative; background: rgb(221, 221, 221); border-radius: 14px; cursor: pointer; transition: background 0.25s;"
                >
                  <div
                    style="height: 28px; width: 30px; position: relative; opacity: 0; pointer-events: none; transition: opacity 0.25s;"
                  >
                    <div
                      class="css-vfszow"
                    >
                      <div
                        class="css-14ic6yi"
                      >
                        <svg
                          aria-hidden="true"
                          class="octicon"
                          fill="currentColor"
                          height="16"
                          role="img"
                          style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M9.598 1.591a.75.75 0 01.785-.175 7 7 0 11-8.967 8.967.75.75 0 01.961-.96 5.5 5.5 0 007.046-7.046.75.75 0 01.175-.786zm1.616 1.945a7 7 0 01-7.678 7.678 5.5 5.5 0 107.678-7.678z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    style="height: 28px; width: 30px; position: absolute; opacity: 1; right: 0px; top: 0px; pointer-events: none; transition: opacity 0.25s;"
                  >
                    <div
                      class="css-vfszow"
                    >
                      <div
                        class="css-14ic6yi"
                      >
                        <svg
                          aria-hidden="true"
                          class="octicon"
                          fill="currentColor"
                          height="16"
                          role="img"
                          style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M8 10.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5zM8 12a4 4 0 100-8 4 4 0 000 8zM8 0a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0V.75A.75.75 0 018 0zm0 13a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0v-1.5A.75.75 0 018 13zM2.343 2.343a.75.75 0 011.061 0l1.06 1.061a.75.75 0 01-1.06 1.06l-1.06-1.06a.75.75 0 010-1.06zm9.193 9.193a.75.75 0 011.06 0l1.061 1.06a.75.75 0 01-1.06 1.061l-1.061-1.06a.75.75 0 010-1.061zM16 8a.75.75 0 01-.75.75h-1.5a.75.75 0 010-1.5h1.5A.75.75 0 0116 8zM3 8a.75.75 0 01-.75.75H.75a.75.75 0 010-1.5h1.5A.75.75 0 013 8zm10.657-5.657a.75.75 0 010 1.061l-1.061 1.06a.75.75 0 11-1.06-1.06l1.06-1.06a.75.75 0 011.06 0zm-9.193 9.193a.75.75 0 010 1.06l-1.06 1.061a.75.75 0 11-1.061-1.06l1.06-1.061a.75.75 0 011.061 0z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="react-switch-handle"
                  style="height: 26px; width: 26px; background: rgb(255, 255, 255); display: inline-block; cursor: pointer; border-radius: 50%; position: absolute; transform: translateX(1px); top: 1px; outline: 0; border: 0px; transition: background-color 0.25s, transform 0.25s, box-shadow 0.15s;"
                />
                <input
                  aria-checked="false"
                  aria-label="Toggle dark mode"
                  role="switch"
                  style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                  type="checkbox"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Application/Header Customized 1`] = `
<DocumentFragment>
  <header
    class="css-1hp4xbx"
  >
    <div
      class="css-2qw0qa"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-f5h6sg"
        >
          <div
            class="css-1r0dpp4"
          >
            <a
              class="css-17rhkus"
              href="/"
            >
              <h2
                class="css-229nmx"
              >
                Component controls
              </h2>
            </a>
          </div>
          <div
            class="css-t64qi8"
          >
            <a
              class="css-12cl38p"
              href="/about"
            >
              About
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-2qw0qa"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-f5h6sg"
        >
          <div
            class="css-1r0dpp4"
          >
            <a
              class="css-ax59ca"
              href="https://github.com/ccontrols/component-controls"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                class="css-f5h6sg"
              >
                <svg
                  aria-hidden="true"
                  class="css-12z0wuy"
                  fill="currentColor"
                  height="32"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                  viewBox="0 0 24 24"
                  width="32"
                >
                  <path
                    d="M7.75 11c-.69 0-1.25.56-1.25 1.25v1.5a1.25 1.25 0 102.5 0v-1.5C9 11.56 8.44 11 7.75 11zm1.27 4.5a.469.469 0 01.48-.5h5a.47.47 0 01.48.5c-.116 1.316-.759 2.5-2.98 2.5s-2.864-1.184-2.98-2.5zm7.23-4.5c-.69 0-1.25.56-1.25 1.25v1.5a1.25 1.25 0 102.5 0v-1.5c0-.69-.56-1.25-1.25-1.25z"
                  />
                  <path
                    d="M21.255 3.82a1.725 1.725 0 00-2.141-1.195c-.557.16-1.406.44-2.264.866-.78.386-1.647.93-2.293 1.677A18.442 18.442 0 0012 5c-.93 0-1.784.059-2.569.17-.645-.74-1.505-1.28-2.28-1.664a13.876 13.876 0 00-2.265-.866 1.725 1.725 0 00-2.141 1.196 23.645 23.645 0 00-.69 3.292c-.125.97-.191 2.07-.066 3.112C1.254 11.882 1 13.734 1 15.527 1 19.915 3.13 23 12 23c8.87 0 11-3.053 11-7.473 0-1.794-.255-3.647-.99-5.29.127-1.046.06-2.15-.066-3.125a23.652 23.652 0 00-.689-3.292zM20.5 14c.5 3.5-1.5 6.5-8.5 6.5s-9-3-8.5-6.5c.583-4 3-6 8.5-6s7.928 2 8.5 6z"
                    fill-rule="evenodd"
                  />
                </svg>
                github
              </div>
            </a>
          </div>
          <div
            class="css-t64qi8"
          >
            <a
              aria-label="visit github repo"
              class="css-ax59ca"
              href="https://github.com/ccontrols/component-controls"
              rel="noopener noreferrer"
              target="_blank"
            >
              <div
                class="css-f5h6sg"
              >
                <div
                  class="css-1psk70t"
                >
                  <svg
                    aria-hidden="true"
                    class="octicon"
                    fill="currentColor"
                    height="32"
                    role="img"
                    style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                    viewBox="0 0 24 24"
                    width="32"
                  >
                    <path
                      d="M14 20.408c-.492.308-.903.546-1.192.709-.153.086-.308.17-.463.252h-.002a.75.75 0 01-.686 0 16.709 16.709 0 01-.465-.252 31.147 31.147 0 01-4.803-3.34C3.8 15.572 1 12.331 1 8.513 1 5.052 3.829 2.5 6.736 2.5 9.03 2.5 10.881 3.726 12 5.605 13.12 3.726 14.97 2.5 17.264 2.5 20.17 2.5 23 5.052 23 8.514c0 3.818-2.801 7.06-5.389 9.262A31.146 31.146 0 0114 20.408z"
                    />
                  </svg>
                </div>
                parteon
              </div>
            </a>
          </div>
          <div
            class="css-t64qi8"
          >
            <div
              class="css-12hibeq"
            >
              <div
                class="css-t2f9yn-SearchInput"
              >
                <input
                  aria-label="full text search"
                  class="css-1uvmzy6-SearchInput"
                  placeholder="search..."
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="css-nxci97-SearchInput"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="css-t64qi8"
          >
            <div
              class="css-vurnku"
            >
              <div
                style="position: relative; display: inline-block; text-align: left; opacity: 1; direction: ltr; border-radius: 14px; transition: opacity 0.25s; user-select: none;"
              >
                <div
                  class="react-switch-bg"
                  style="height: 28px; width: 56px; margin: 0px; position: relative; background: rgb(221, 221, 221); border-radius: 14px; cursor: pointer; transition: background 0.25s;"
                >
                  <div
                    style="height: 28px; width: 30px; position: relative; opacity: 0; pointer-events: none; transition: opacity 0.25s;"
                  >
                    <div
                      class="css-vfszow"
                    >
                      <div
                        class="css-14ic6yi"
                      >
                        <svg
                          aria-hidden="true"
                          class="octicon"
                          fill="currentColor"
                          height="16"
                          role="img"
                          style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M9.598 1.591a.75.75 0 01.785-.175 7 7 0 11-8.967 8.967.75.75 0 01.961-.96 5.5 5.5 0 007.046-7.046.75.75 0 01.175-.786zm1.616 1.945a7 7 0 01-7.678 7.678 5.5 5.5 0 107.678-7.678z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    style="height: 28px; width: 30px; position: absolute; opacity: 1; right: 0px; top: 0px; pointer-events: none; transition: opacity 0.25s;"
                  >
                    <div
                      class="css-vfszow"
                    >
                      <div
                        class="css-14ic6yi"
                      >
                        <svg
                          aria-hidden="true"
                          class="octicon"
                          fill="currentColor"
                          height="16"
                          role="img"
                          style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M8 10.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5zM8 12a4 4 0 100-8 4 4 0 000 8zM8 0a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0V.75A.75.75 0 018 0zm0 13a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0v-1.5A.75.75 0 018 13zM2.343 2.343a.75.75 0 011.061 0l1.06 1.061a.75.75 0 01-1.06 1.06l-1.06-1.06a.75.75 0 010-1.06zm9.193 9.193a.75.75 0 011.06 0l1.061 1.06a.75.75 0 01-1.06 1.061l-1.061-1.06a.75.75 0 010-1.061zM16 8a.75.75 0 01-.75.75h-1.5a.75.75 0 010-1.5h1.5A.75.75 0 0116 8zM3 8a.75.75 0 01-.75.75H.75a.75.75 0 010-1.5h1.5A.75.75 0 013 8zm10.657-5.657a.75.75 0 010 1.061l-1.061 1.06a.75.75 0 11-1.06-1.06l1.06-1.06a.75.75 0 011.06 0zm-9.193 9.193a.75.75 0 010 1.06l-1.06 1.061a.75.75 0 11-1.061-1.06l1.06-1.061a.75.75 0 011.061 0z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="react-switch-handle"
                  style="height: 26px; width: 26px; background: rgb(255, 255, 255); display: inline-block; cursor: pointer; border-radius: 50%; position: absolute; transform: translateX(1px); top: 1px; outline: 0; border: 0px; transition: background-color 0.25s, transform 0.25s, box-shadow 0.15s;"
                />
                <input
                  aria-checked="false"
                  aria-label="Toggle dark mode"
                  role="switch"
                  style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                  type="checkbox"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Application/Header Overview 1`] = `
<DocumentFragment>
  <header
    class="css-1hp4xbx"
  >
    <div
      class="css-2qw0qa"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-f5h6sg"
        >
          <div
            class="css-1r0dpp4"
          >
            <a
              class="css-17rhkus"
              href="/"
            >
              <h2
                class="css-229nmx"
              >
                Component controls
              </h2>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-2qw0qa"
    >
      <div
        class="css-vurnku"
      >
        <div
          class="css-f5h6sg"
        >
          <div
            class="css-1r0dpp4"
          >
            <div
              class="css-12hibeq"
            >
              <div
                class="css-t2f9yn-SearchInput"
              >
                <input
                  aria-label="full text search"
                  class="css-1uvmzy6-SearchInput"
                  placeholder="search..."
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="css-nxci97-SearchInput"
                  fill="currentColor"
                  height="16"
                  role="img"
                  style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    d="M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="css-t64qi8"
          >
            <div
              class="css-vurnku"
            >
              <div
                style="position: relative; display: inline-block; text-align: left; opacity: 1; direction: ltr; border-radius: 14px; transition: opacity 0.25s; user-select: none;"
              >
                <div
                  class="react-switch-bg"
                  style="height: 28px; width: 56px; margin: 0px; position: relative; background: rgb(221, 221, 221); border-radius: 14px; cursor: pointer; transition: background 0.25s;"
                >
                  <div
                    style="height: 28px; width: 30px; position: relative; opacity: 0; pointer-events: none; transition: opacity 0.25s;"
                  >
                    <div
                      class="css-vfszow"
                    >
                      <div
                        class="css-14ic6yi"
                      >
                        <svg
                          aria-hidden="true"
                          class="octicon"
                          fill="currentColor"
                          height="16"
                          role="img"
                          style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M9.598 1.591a.75.75 0 01.785-.175 7 7 0 11-8.967 8.967.75.75 0 01.961-.96 5.5 5.5 0 007.046-7.046.75.75 0 01.175-.786zm1.616 1.945a7 7 0 01-7.678 7.678 5.5 5.5 0 107.678-7.678z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div
                    style="height: 28px; width: 30px; position: absolute; opacity: 1; right: 0px; top: 0px; pointer-events: none; transition: opacity 0.25s;"
                  >
                    <div
                      class="css-vfszow"
                    >
                      <div
                        class="css-14ic6yi"
                      >
                        <svg
                          aria-hidden="true"
                          class="octicon"
                          fill="currentColor"
                          height="16"
                          role="img"
                          style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M8 10.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5zM8 12a4 4 0 100-8 4 4 0 000 8zM8 0a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0V.75A.75.75 0 018 0zm0 13a.75.75 0 01.75.75v1.5a.75.75 0 01-1.5 0v-1.5A.75.75 0 018 13zM2.343 2.343a.75.75 0 011.061 0l1.06 1.061a.75.75 0 01-1.06 1.06l-1.06-1.06a.75.75 0 010-1.06zm9.193 9.193a.75.75 0 011.06 0l1.061 1.06a.75.75 0 01-1.06 1.061l-1.061-1.06a.75.75 0 010-1.061zM16 8a.75.75 0 01-.75.75h-1.5a.75.75 0 010-1.5h1.5A.75.75 0 0116 8zM3 8a.75.75 0 01-.75.75H.75a.75.75 0 010-1.5h1.5A.75.75 0 013 8zm10.657-5.657a.75.75 0 010 1.061l-1.061 1.06a.75.75 0 11-1.06-1.06l1.06-1.06a.75.75 0 011.06 0zm-9.193 9.193a.75.75 0 010 1.06l-1.06 1.061a.75.75 0 11-1.061-1.06l1.06-1.061a.75.75 0 011.061 0z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="react-switch-handle"
                  style="height: 26px; width: 26px; background: rgb(255, 255, 255); display: inline-block; cursor: pointer; border-radius: 50%; position: absolute; transform: translateX(1px); top: 1px; outline: 0; border: 0px; transition: background-color 0.25s, transform 0.25s, box-shadow 0.15s;"
                />
                <input
                  aria-checked="false"
                  aria-label="Toggle dark mode"
                  role="switch"
                  style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px;"
                  type="checkbox"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Application/Sidebar Overview 1`] = `
<DocumentFragment>
  <div
    class="css-1mz8zpz-Sidebar"
    id="sidebar"
  >
    <div
      class="css-6cvfyb"
    />
    <div
      class="css-t8rvym"
    >
      <div
        class="css-1es5hcv"
      >
        <div
          class="css-1es5hcv"
        >
          <div
            class="css-uliqdc"
          >
            <div
              class="css-1r0dpp4"
            >
              <h3
                class="css-yrrbzf"
              >
                sidebar
              </h3>
            </div>
            <div
              class="css-t64qi8"
            >
              <div
                class="css-1dj4wno"
              >
                <input
                  class="css-iyqgnx"
                  placeholder="filter..."
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <nav
          class="css-vurnku"
        >
          <div
            class="css-vurnku"
          >
            <div
              class="css-j6yaho"
            >
              <button
                class="css-161l3jj"
              >
                <div
                  class="css-1i09fc1"
                >
                  <div
                    class="css-11328uk"
                  >
                    <div
                      class="css-f5h6sg"
                    >
                      <div
                        class="css-11c8po5"
                      >
                        <strong>
                          Story
                        </strong>
                      </div>
                    </div>
                    <div
                      aria-label="expand items"
                      class="css-lzd0h4"
                    >
                      <svg
                        aria-hidden="true"
                        class="octicon"
                        fill="currentColor"
                        height="16"
                        role="img"
                        style="display: inline-block; user-select: none; vertical-align: text-bottom;"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M6.22 3.22a.75.75 0 011.06 0l4.25 4.25a.75.75 0 010 1.06l-4.25 4.25a.75.75 0 01-1.06-1.06L9.94 8 6.22 4.28a.75.75 0 010-1.06z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="css-vurnku"
          >
            <div
              class="css-j6yaho"
            >
              <a
                class="css-1t6zyk7"
                href="/docs/mdx-story"
              >
                <div
                  class="css-1i09fc1"
                >
                  <div
                    class="css-11328uk"
                  >
                    <div
                      class="css-f5h6sg"
                    >
                      <div
                        class="css-9cwl6c"
                      >
                        <svg
                          aria-hidden="true"
                          class="octicon"
                          fill="currentColor"
                          height="16"
                          role="img"
                          style="display: inline-block; user-select: none; vertical-align: middle;"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M0 3.75C0 2.784.784 2 1.75 2h12.5c.966 0 1.75.784 1.75 1.75v8.5A1.75 1.75 0 0114.25 14H1.75A1.75 1.75 0 010 12.25v-8.5zm1.75-.25a.25.25 0 00-.25.25v8.5c0 .138.112.25.25.25h12.5a.25.25 0 00.25-.25v-8.5a.25.25 0 00-.25-.25H1.75zM3.5 6.25a.75.75 0 01.75-.75h7a.75.75 0 010 1.5h-7a.75.75 0 01-.75-.75zm.75 2.25a.75.75 0 000 1.5h4a.75.75 0 000-1.5h-4z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="css-11c8po5"
                      >
                        MDX Story
                      </div>
                    </div>
                  </div>
                </div>
              </a>
            </div>
          </div>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Application/SidebarsPage Overview 1`] = `<DocumentFragment />`;
